Fixed horizontal scrollbar at login page when "persistent popup" is rendered

--- a/web/css/components/_tooltip.less
+++ b/web/css/components/_tooltip.less
@@ -14,8 +14,10 @@
     .tooltip.wrapper {
         position: relative;
         .tooltip.content {
-            .right(auto);
-            .left(0);
+            @media @media-xs {
+                .right(auto);
+                .left(0);
+            }
             top: 100%;
         }
     }
